--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/chadananda/irls-audio-aligner-interface/issues"
   },
-  "homepage": "https://github.com/chadananda/irls-audio-aligner-interface#readme"
+  "homepage": "https://github.com/chadananda/irls-audio-aligner-interface#readme",
+  "dependencies": {
+    "fetch": "^1.1.0"
+  }
 }
