--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "homepage": "https://github.com/chadananda/irls-audio-aligner-interface#readme",
   "dependencies": {
-    "fetch": "^1.1.0"
+    "pro-request": "^2.2.3"
   }
 }
