--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "irls-audio-aligner-interface",
   "version": "1.0.5",
   "description": "Interface module to utilize IRLS audio aligner service",
-  "main": "aligner.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/chadananda/irls-audio-aligner-interface#readme",
   "dependencies": {
-    "pro-request": "^2.2.3"
+    "pro-request": "^2.2.3",
+    "cheerio": "0.22.0"
   }
 }
